--- a/auth-server/auth-server-web/src/main/filters/dev-env.properties
+++ b/auth-server/auth-server-web/src/main/filters/dev-env.properties
@@ -1,9 +1,11 @@
-redis.host=
-redis.port=
-redis.password=
+redis.host=115.29.47.18
+redis.port=7480
+redis.password=112358K
 
-cas.logout.redirect.url=
-cas.login.url=
-cas.server.url.prefix=
-cas.service=
-cas.success.url=
+
+cas.logout.redirect.url=http://114.55.15.198:30002/logout?service=http://127.0.0.1:8081/
+cas.login.url=http://114.55.15.198:30002/login?service=http://127.0.0.1:8081/cas
+cas.server.url.prefix=http://114.55.15.198:30002/
+cas.service=http://127.0.0.1:8081/cas
+cas.success.url=http://127.0.0.1:8081/index/success
+cas.app.key=9aab2f3c-ff95-40bc-89bb-097bbb91c9d4
