--- a/auth-server/auth-server-web/src/main/resources/cas.properties
+++ b/auth-server/auth-server-web/src/main/resources/cas.properties
@@ -3,3 +3,4 @@ cas.login.url=${cas.login.url}
 cas.server.url.prefix=${cas.server.url.prefix}
 cas.service=${cas.service}
 cas.success.url=${cas.success.url}
+cas.app.key=${cas.app.key}
