--- a/auth-server/auth-server-web/src/main/resources/log4j.properties
+++ b/auth-server/auth-server-web/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 #根logger
-log4j.rootLogger=DEBUG,console,CATALINA
+log4j.rootLogger=info,console,CATALINA
 
 log4j.appender.logfile.encoding=UTF-8
 
