--- a/auth-server/auth-server-core/pom.xml
+++ b/auth-server/auth-server-core/pom.xml
@@ -135,9 +135,15 @@
             <artifactId>jackson-annotations</artifactId>
             <version>${version.jackson.databind}</version>
         </dependency>
+
         <dependency>
-            <groupId>com.yunbeitech</groupId>
-            <artifactId>yunbei-auth-server-common</artifactId>
+            <groupId>com.lingchaomin.auth</groupId>
+            <artifactId>auth-cas-shiro-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.lingchaomin.auth</groupId>
+            <artifactId>auth-server-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
