--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>auth-client</module>
         <module>auth-server</module>
         <module>auth-core</module>
+        <module>auth-cas-shiro-common</module>
     </modules>
 
     <properties>
