添加cas单点登录服务端

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>auth-server</module>
         <module>auth-core</module>
         <module>auth-cas-shiro-common</module>
+        <module>auth-cas</module>
     </modules>
 
     <properties>
