--- a/auth-cas/src/main/webapp/WEB-INF/cas.properties
+++ b/auth-cas/src/main/webapp/WEB-INF/cas.properties
@@ -126,7 +126,11 @@ redis.timeout=10000
 # wechat oauth2 login configuration
 oauth2.wechat.appid=123456
 oauth2.wechat.secret=123456
-oauth2.wechat.callbackUrl=
+oauth2.wechat.callbackUrl=http://www.example.com/qqlogin
+
+oauth2.qq.appid=123456
+oauth2.qq.secret=123456
+oauth2.qq.callbackUrl=http://www.example.com/qqlogin
 
 cas.jdbc.url=jdbc:mysql://120.26.195.191:30001/yunbei-auth?characterEncoding=UTF8&allowMultiQueries=true
 cas.jdbc.user=yunbeidb
