--- a/auth-cas/src/main/webapp/WEB-INF/cas.properties
+++ b/auth-cas/src/main/webapp/WEB-INF/cas.properties
@@ -132,7 +132,7 @@ oauth2.qq.appid=123456
 oauth2.qq.secret=123456
 oauth2.qq.callbackUrl=http://www.example.com/qqlogin
 
-cas.jdbc.url=jdbc:mysql://120.26.195.191:30001/yunbei-auth?characterEncoding=UTF8&allowMultiQueries=true
+cas.jdbc.url=jdbc:mysql://sql.url/auth?characterEncoding=UTF8&allowMultiQueries=true
 cas.jdbc.user=yunbeidb
 cas.jdbc.password=YUNBEIdb!@#2014
 cas.password.sql=select entry_password from user where mobile=? and locked=false limit 1
