--- a/auth-cas/src/main/webapp/WEB-INF/cas.properties
+++ b/auth-cas/src/main/webapp/WEB-INF/cas.properties
@@ -133,8 +133,8 @@ oauth2.qq.secret=123456
 oauth2.qq.callbackUrl=http://www.example.com/qqlogin
 
 cas.jdbc.url=jdbc:mysql://sql.url/auth?characterEncoding=UTF8&allowMultiQueries=true
-cas.jdbc.user=yunbeidb
-cas.jdbc.password=YUNBEIdb!@#2014
+cas.jdbc.user=test
+cas.jdbc.password=test
 cas.password.sql=select entry_password from user where mobile=? and locked=false limit 1
 cas.salt.sql=select salt from user where mobile=? and locked=false limit 1
 cas.qq.user.insert.sql=insert ignore into qq_user(open_id,nick_name,figure_url) values(?,?,?)
