--- a/auth-cas/src/main/webapp/WEB-INF/cas.properties
+++ b/auth-cas/src/main/webapp/WEB-INF/cas.properties
@@ -115,9 +115,9 @@ memcached.locatorType=ARRAY_MOD
 memcached.failureMode=Redistribute
 
 redis.database=0
-redis.host=bae2c4b188a94b2e.m.cnhza.kvstore.aliyuncs.com
+redis.host=rtedis.com
 redis.port=6379
-redis.password=YUNBEItechredis2016
+redis.password=123456
 redis.st_time=100000
 redis.tgt_time=100000
 redis.expire=18000
