--- a/auth-cas/src/main/webapp/WEB-INF/cas.properties
+++ b/auth-cas/src/main/webapp/WEB-INF/cas.properties
@@ -17,7 +17,7 @@
 # under the License.
 #
 
-server.name=http://localhost:8080
+server.name=http://localhost:8082
 server.prefix=${server.name}/cas
 # IP address or CIDR subnet allowed to access the /status URI of CAS that exposes health check information
 cas.securityContext.status.allowedSubnet=127.0.0.1
@@ -115,9 +115,9 @@ memcached.locatorType=ARRAY_MOD
 memcached.failureMode=Redistribute
 
 redis.database=0
-redis.host=rtedis.com
-redis.port=6379
-redis.password=123456
+redis.host=115.29.47.18
+redis.port=7480
+redis.password=112358K
 redis.st_time=100000
 redis.tgt_time=100000
 redis.expire=18000
@@ -132,9 +132,9 @@ oauth2.qq.appid=123456
 oauth2.qq.secret=123456
 oauth2.qq.callbackUrl=http://www.example.com/qqlogin
 
-cas.jdbc.url=jdbc:mysql://sql.url/auth?characterEncoding=UTF8&allowMultiQueries=true
-cas.jdbc.user=test
-cas.jdbc.password=test
+cas.jdbc.url=jdbc:mysql://127.0.0.1:3306/auth?characterEncoding=UTF8&allowMultiQueries=true
+cas.jdbc.user=root
+cas.jdbc.password=root
 cas.password.sql=select entry_password from user where mobile=? and locked=false limit 1
 cas.salt.sql=select salt from user where mobile=? and locked=false limit 1
 cas.qq.user.insert.sql=insert ignore into qq_user(open_id,nick_name,figure_url) values(?,?,?)
