--- a/auth-server/auth-server-web/src/main/filters/dev-env.properties
+++ b/auth-server/auth-server-web/src/main/filters/dev-env.properties
@@ -1,11 +1,12 @@
-redis.host=
-redis.port=
-redis.password=
+redis.host=115.29.47.18
+redis.port=7480
+redis.password=112358K
+redis.database=0
 
 
-cas.logout.redirect.url=
-cas.login.url=
-cas.server.url.prefix=
-cas.service=
-cas.success.url=
-cas.app.key=
+cas.logout.redirect.url=http://localhost:8082/logout?service=http://localhost:8081/
+cas.login.url=http://localhost:8082/cas/login?service=http://localhost:8081/cas
+cas.server.url.prefix=http://localhost:8082/
+cas.service=http://localhost:8081/cas
+cas.success.url=http://localhost:8081/index/success
+cas.app.key=b770a498-b575-462f-8c16-687c5129c82d
