--- a/auth-cas/pom.xml
+++ b/auth-cas/pom.xml
@@ -143,7 +143,7 @@
                 <version>8.1.8.v20121106</version>
                 <configuration>
                     <webAppConfig>
-                        <contextPath>/cas</contextPath>
+                        <contextPath>/</contextPath>
                         <allowDuplicateFragmentNames>true</allowDuplicateFragmentNames>
                     </webAppConfig>
                     <connectors>
