--- a/auth-server/auth-server-web/src/main/resources/jdbc.properties
+++ b/auth-server/auth-server-web/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=
-jdbc.username=
-jdbc.password=
+jdbc.url=jdbc:mysql://localhost:3306/auth?useUnicode=true&characterEncoding=UTF8&allowMultiQueries=true
+jdbc.username=root
+jdbc.password=root
 jdbc.initialSize=0
 jdbc.maxTotal=20
 jdbc.maxIdle=20
